# flatten-directory-rs

./: .editorconfig  Cargo.toml  readme.md
examples/basic/: main.rs
src/: lib.rs  main.rs
