[package]
name = "flatten-directory"
version = "1.0.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/hoshiyuki-tamako/flatten-directory-rs"
repository = "https://github.com/hoshiyuki-tamako/flatten-directory-rs"
keywords = ["file", "split", "directory"]
categories = ["command-line-utilities", "filesystem"]
readme = "readme.md"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.20", features = ["derive"] }
walkdir = "2.5.0"

[profile.release]
strip = true
lto = true
codegen-units = 1

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"

[dev-dependencies]
fake = "2.10.0"
